# astc-encoder

./: .gitignore  CMakeLists.txt  README.md  astc-encoder.sln
astc_dll_test/: Program.cs  astc_dll_test.csproj
astc_dll_test/images/: test.astc
astc_lib/: CMakeLists.txt  astc_lib.cpp  astc_lib_error_metrics.cpp  astc_lib_help.cpp  astc_lib_image.cpp  astc_lib_image_external.cpp  astc_lib_image_load_store.cpp  astc_lib_main.cpp  astc_lib_platform_dependents.cpp
